# Basic

./: .gitignore  README.md
AwsDeployGuide/express/: package-lock.json  package.json  tsconfig.json
C_Study/: README.md  agreement  agreement.c  calculator  calculator.c  compare  hello  hello.c  mario  meow.c
C_Study/C_pointer/: README.md  append  append.c  str_length  str_length.c  strip  strip.c  words  words.c  words.txt
C_Study/DataStructure/: SingleLinkedList  SingleLinkedList.c  SingleList  SingleList.c  SingleListDummyHead  SingleListDummyHead.c
C_Study/lecture1/: compare.c  mario.c  meow
C_Study/lecture2/: README.md  buggy1.c  greet.c  hello.c  hi.c  length.c  print.h  scores.c  uppercase.c
C_Study/lecture3/: README.md  iteration.c  phonebook.c  recursion.c  search.c
C_Study/lecture4/: README.md  addresses.c  compare.c  copy.c  get.c  memory.c  swap.c
C_Study/process/: console.md  process_controller.c
DockerTutorial/react-app/: Dockerfile  docker-compose.yml
FastAPITutorial/: pyproject.toml
FastAPITutorial/basic/: api.py  model.py  todo.py
FastAPITutorial/planner/: main.py  planner.db
FastAPITutorial/planner/database/: connection.py
FastAPITutorial/planner/models/: events.py  users.py
FastAPITutorial/planner/routes/: events.py  users.py
Java_Study/: README.md
Java_Study/JavaTutorial/: SelfStudy.java
Nand2tetris/: README.md
Nand2tetris/project1/: README.md
process/: process_controller
public_CS_Study/: lru.py  python_factory.py  python_iterator.py  python_observer.py  python_singleton.py  python_strategy.py
(+161 files in other folders)
