[tool.poetry]
name = "fastapitutorial"
version = "0.1.0"
description = "FastAPI"
authors = ["이주환 <118493627+LeeJuHwan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "1.4.46"
pydantic = {version = "1.9.0", extras = ["email"]}
sqlmodel = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
